# NdkUseOpenssl

./: .gitignore  README-cn.md  README.md  build.gradle  gradle.properties  make_openssl.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/areful/openssl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: rsa_private_key.pem  rsa_public_key.pem
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h  rsa_lib.cpp  rsa_lib.h
app/src/main/cpp/aes/: CMakeLists.txt  aes_wrapper.cpp  base64.cpp  test_aes.h
app/src/main/cpp/b64/: b64.cpp  test_b64.cpp
app/src/main/cpp/rsa/: rsa.cpp  rsa.h  test_rsa.h
app/src/main/java/cn/areful/openssl/: Encryption.java  MainActivity.java  PaymentSecureManager.java
app/src/main/java/com/chebada/encrypt/: Encryption.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/areful/openssl/: ExampleUnitTest.java
encrypt/: build.gradle
encrypt/src/androidTest/java/cn/areful/encrypt/: ExampleInstrumentedTest.java
encrypt/src/main/: AndroidManifest.xml
encrypt/src/main/cpp/: CMakeLists.txt  common.h  native-lib.cpp  native-lib.h  rsa_lib.cpp  rsa_lib.h  utils.cpp  utils.h
encrypt/src/main/cpp/aes/: aes_wrapper.cpp  aes_wrapper.h  base64.cpp  base64.h  test_aes.cpp
encrypt/src/main/cpp/b64/: b64.h  test_b64.h
encrypt/src/main/cpp/include/openssl/: bio.h  cmp.h  configuration.h  ssl.h
encrypt/src/main/cpp/rsa/: test_rsa.cpp
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
